fix configuration switches to allow just one at a time

--- a/src/app/secure/mydevices/mydevices.component.html
+++ b/src/app/secure/mydevices/mydevices.component.html
@@ -1,30 +1,26 @@
 <div class="container">
     <div class="">
         <div class="row">
-            <div *ngFor="let device of (devices| async); let i = index" class="card user-card">
+            <div *ngFor="let device of (devices | async); let i = index" class="card user-card">
+
                 <div class="card-header">
-                    <h5>Device Name: </h5>
-                    <h7>Device Address: {{device.address}}</h7><br>
+                    <h5>Location: {{device.location}} </h5>
+                    <h7>Address: {{device.address.slice(12,14)}} {{device.address.slice(14,16)}} </h7><br>
                     <h7>Device ID: {{device.id}}</h7>
                 </div>
-                <div class="card-body form-group">
-                    <label for="pointScale">Point Scale</label>
-                    <input class="form-control-range" id="pointScale" type="range" min="10" max="300" [value]="device.point_scale"
-                        step="10" (input)="pointScale(i,$event.target.value)">
-                        {{device.point_scale}}
-                </div>
+
                 <div class="card-body form-group">
                     <div class="custom-control custom-switch">
                         <input (click)="enableMedic(i)" type="checkbox" class="custom-control-input" [id]="'medicSwitch-' + i" [checked]="device.allow_medic">
-                        <label class="custom-control-label" [for]="'medicSwitch-' + i">Medic Enabled:</label>{{device.allow_medic}}
+                        <label class="custom-control-label" [for]="'medicSwitch-' + i">Allow Medic</label>
                     </div>
                     <div *ngIf="device.allow_medic === true">
                         <div class="card card-body">
                             <div class="form-group">
                                 <label for="medTime">Medic Time</label>
-                                <input class="form-control-range" id="medTime" type="range" min="1" max="10" [value]="device.med_time"
+                                <input class="form-control-range" id="medTime" type="range" min="0" max="32" [value]="device.med_time"
                                     step="1" (input)="medicTime(i,$event.target.value)">
-                                    {{device.med_time}}
+                                    {{convertTime(device.med_time)}}
                             </div>
                         </div>
                     </div>
@@ -34,29 +30,28 @@
 
                 <div class="card-body form-group">
                     <div class="custom-control custom-switch">
-                        <input (click)="enableBomb(i)" type="checkbox" class="custom-control-input" [id]="'bombSwitch-' + i" [checked]="bombEnable">
-                        <label class="custom-control-label" [for]="'bombSwitch-' + i">Bomb Mode Enabled:</label>
-                        {{bombEnable}}
+                        <input (click)="enableBomb(i)" type="checkbox" class="custom-control-input" [id]="'bombSwitch-' + i" [checked]="isBombEnabled(i)">
+                        <label class="custom-control-label" [for]="'bombSwitch-' + i">Bomb Mode</label>
                     </div>
-                    <div *ngIf="bombEnable">
+                    <div *ngIf="isBombEnabled(i)">
                         <div class="card card-body">
                             <div class="form-group">
                                 <label for="armTime">Arm Time</label>
-                                <input class="form-control-range" id="armTime" type="range" min="1" max="10" [value]="device.arm_time"
+                                <input class="form-control-range" id="armTime" type="range" min="0" max="11" [value]="device.arm_time"
                                     step="1" (input)="armTime(i,$event.target.value)">
-                                    {{device.arm_time}}
+                                    {{convertTime(device.arm_time)}}
                             </div>
                             <div class="form-group">
-                                <label for="blastTime">Time till blast</label>
-                                <input class="form-control-range" id="blastTime" type="range" min="1" max="30" [value]="device.bomb_time"
+                                <label for="blastTime">Fuse Timer</label>
+                                <input class="form-control-range" id="blastTime" type="range" min="0" max="32" [value]="device.bomb_time"
                                     step="1" (input)="bombTime(i,$event.target.value)">
-                                    {{device.bomb_time}}
+                                    {{convertTime(device.bomb_time)}}
                             </div>
                             <div class="form-group">
-                                <label for="difuseTime">Difuse Time</label>
-                                <input class="form-control-range" id="difuseTime" type="range" min="1" max="30" [value]="device.diff_time"
+                                <label for="difuseTime">Diffuse Time</label>
+                                <input class="form-control-range" id="difuseTime" type="range" min="0" max="11" [value]="device.diff_time"
                                     step="1" (input)="difuseTime(i,$event.target.value)">
-                                    {{device.diff_time}}
+                                    {{convertTime(device.diff_time)}}
                             </div>
                         </div>
                     </div>
@@ -66,25 +61,33 @@
 
                 <div class="card-body form-group">
                     <div class="custom-control custom-switch">
-                        <input (click)="enableCapture(i)" type="checkbox" class="custom-control-input" [id]="'captureSwitch-' + i" [checked]="captureEnable">
-                        <label class="custom-control-label" [for]="'captureSwitch-' + i">Capture Mode Enabled:</label>
-                        {{captureEnable}}
+                        <input (click)="enableCapture(i)" type="checkbox" class="custom-control-input" [id]="'captureSwitch-' + i" [checked]="isCaptureEnabled(i)">
+                        <label class="custom-control-label" [for]="'captureSwitch-' + i">Capture Mode</label>
                     </div>
-                    <div *ngIf="captureEnable">
+                    <div *ngIf="isCaptureEnabled(i)">
                         <div class="card card-body">
+
                             <div class="form-group">
-                                <label for="captime">Time to Capture Point</label>
-                                <input class="form-control-range" id="captime" type="range" min="1" max="10" [value]="device.cap_time"
+                                <label for="captime">Stabilization Time</label>
+                                <input class="form-control-range" id="captime" type="range" min="0" max="32" [value]="device.cap_time"
                                     step="1" (input)="capTime(i,$event.target.value)">
-                                    {{device.cap_time}}
+                                    {{convertTime(device.cap_time)}}
                             </div>
+
                             <div class="form-group">
                                 <label for="capasst">Capture Assist</label>
-                                <input class="form-control-range" id="capasst" type="range" min="1" max="30" [value]="device.cap_asst"
+                                <input class="form-control-range" id="capasst" type="range" min="0" max="8" [value]="device.cap_asst"
                                     step="1" (input)="capasst(i,$event.target.value)">
-                                    {{device.cap_asst}}%
+                                    {{convertPerc(device.cap_asst)}} %
                             </div>
-                           
+
+                            <div class="card-body form-group">
+                                <label for="pointScale">Point Scale</label>
+                                <input class="form-control-range" id="pointScale" type="range" min="0" max="11" [value]="device.point_scale"
+                                    step="1" (input)="pointScale(i,$event.target.value)">
+                                    {{convertPointScale(device.point_scale)}}
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -96,7 +99,7 @@
     </div>
 </div>
 
-<!-- 
+<!--
 //below are constants
 address: "0013A20041A66B3F"
 id: 7
@@ -133,7 +136,7 @@ cap_time: 1 - range
 
 
 config: 10 ?
-stable: 1 -range? is this how long it take to be stable? 
+stable: 1 -range? is this how long it take to be stable?
 
 
 
