--- a/src/app/auth/sign-in/sign-in.component.html
+++ b/src/app/auth/sign-in/sign-in.component.html
@@ -17,7 +17,6 @@
 						</ul>
 						<br>
 						<form [formGroup]="login" autocomplete="off" method="POST">
-
 							<div class="form-group input-group">
 								<span class="input-group-addon"><i class="fa fa-user"></i></span>
 								<input id="callSign" formControlName="callSign" type="text" class="form-control"
@@ -29,7 +28,6 @@
 									</div>
 								</div>
 							</div>
-
 							<div class="form-group input-group ">
 								<span class="input-group-addon"><i class="fa fa-user"></i></span>
 								<input id="fieldName" style="display: none;" formControlName="fieldName" type="text"
@@ -41,7 +39,6 @@
 									</div>
 								</div>
 							</div>
-
 							<div class="form-group input-group">
 								<span class="input-group-addon"><i class="fa fa-lock"></i></span>
 								<input formControlName="password" type="password" class="form-control"
@@ -56,7 +53,6 @@
 									</div>
 								</div>
 							</div>
-
 							<div class="row">
 								<div class="col-6">
 									<button (click)="onSubmit()" type="button"
@@ -67,12 +63,12 @@
 								</div>
 								<div class="row">
 									<div id="userLoginFaileddMessage" class="alert alert-danger d-none center-cust">
-									   We are sorry we were not able to create your account at this time <br>
-									   Please try again or <a [routerLink]="['/non-secure/contact-us']" >contact us from our contact us page</a>
+										We are sorry we were not able to create your account at this time <br>
+										Please try again or <a [routerLink]="['/non-secure/contact-us']">contact us from
+											our contact us page</a>
 									</div>
-								 </div>
+								</div>
 							</div>
-							
 						</form>
 					</div>
 				</div>
@@ -84,7 +80,6 @@
 									[routerLink]="['/non-secure/field-info']">here</a>.</p>
 							<p> Are you a player? <a [routerLink]="['/auth/sign-up']">Register
 									here</a>!</p>
-
 						</div>
 					</div>
 				</div>
