--- a/src/app/secure/manage-game/manage-game.component.html
+++ b/src/app/secure/manage-game/manage-game.component.html
@@ -1,4 +1,8 @@
+
 <div class="container">
+	<app-game-config></app-game-config>
+</div>
+<!-- <div class="container">
     <div class="container-fluid p-0">
 		<h1 class="h3 mb-3">Clients</h1>
 		<div class="row">
@@ -234,4 +238,4 @@
 		</div>
 
 	</div>
-</div>
+</div> -->
