Fixup the sliders to default to/show align to the correct slider postion

--- a/src/app/global/device-list/device-list.component.html
+++ b/src/app/global/device-list/device-list.component.html
@@ -7,7 +7,7 @@
                 <div class="card-header">
                     <h5>Location: {{device.location}} </h5>
                     <h7>Address: {{device.address.slice(12,14)}} {{device.address.slice(14,16)}} </h7><br>
-                    <h7>Device ID: {{device.id}}</h7>
+                    <!-- <h7>Device ID: {{device.id}}</h7> -->
                 </div>
 
                 <div class="card-body form-group">
@@ -21,7 +21,7 @@
                             <div class="form-group">
                                 <label for="medTime">Medic Time</label>
                                 <input class="form-control-range" id="medTime" type="range" min="0" max="32"
-                                    [value]="device.med_time" step="1" (input)="medicTime(i,$event.target.value)">
+                                    [value]="getTimeIndex(device.med_time)" step="1" (input)="medicTime(i,$event.target.value)">
                                 {{convertTime(device.med_time)}}
                             </div>
                         </div>
@@ -41,19 +41,19 @@
                             <div class="form-group">
                                 <label for="armTime">Arm Time</label>
                                 <input class="form-control-range" id="armTime" type="range" min="0" max="11"
-                                    [value]="device.arm_time" step="1" (input)="armTime(i,$event.target.value)">
+                                    [value]="getTimeIndex(device.arm_time)" step="1" (input)="armTime(i,$event.target.value)">
                                 {{convertTime(device.arm_time)}}
                             </div>
                             <div class="form-group">
                                 <label for="blastTime">Fuse Timer</label>
                                 <input class="form-control-range" id="blastTime" type="range" min="0" max="32"
-                                    [value]="device.bomb_time" step="1" (input)="bombTime(i,$event.target.value)">
+                                    [value]="getTimeIndex(device.bomb_time)" step="1" (input)="bombTime(i,$event.target.value)">
                                 {{convertTime(device.bomb_time)}}
                             </div>
                             <div class="form-group">
                                 <label for="difuseTime">Diffuse Time</label>
                                 <input class="form-control-range" id="difuseTime" type="range" min="0" max="11"
-                                    [value]="device.diff_time" step="1" (input)="difuseTime(i,$event.target.value)">
+                                    [value]="getTimeIndex(device.diff_time)" step="1" (input)="difuseTime(i,$event.target.value)">
                                 {{convertTime(device.diff_time)}}
                             </div>
                         </div>
@@ -74,21 +74,21 @@
                             <div class="form-group">
                                 <label for="captime">Stabilization Time</label>
                                 <input class="form-control-range" id="captime" type="range" min="0" max="32"
-                                    [value]="device.cap_time" step="1" (input)="capTime(i,$event.target.value)">
+                                    [value]="getTimeIndex(device.cap_time)" step="1" (input)="capTime(i,$event.target.value)">
                                 {{convertTime(device.cap_time)}}
                             </div>
 
                             <div class="form-group">
                                 <label for="capasst">Capture Assist</label>
                                 <input class="form-control-range" id="capasst" type="range" min="0" max="8"
-                                    [value]="device.cap_asst" step="1" (input)="capasst(i,$event.target.value)">
+                                    [value]="getPercIndex(device.cap_asst)" step="1" (input)="capasst(i,$event.target.value)">
                                 {{convertPerc(device.cap_asst)}} %
                             </div>
 
                             <div class="card-body form-group">
                                 <label for="pointScale">Point Scale</label>
                                 <input class="form-control-range" id="pointScale" type="range" min="0" max="11"
-                                    [value]="device.point_scale" step="1" (input)="pointScale(i,$event.target.value)">
+                                    [value]="getScaleIndex(device.point_scale)" step="1" (input)="pointScale(i,$event.target.value)">
                                 {{convertPointScale(device.point_scale)}}
                             </div>
 
