--- a/src/app/global/device-list/device-list.component.html
+++ b/src/app/global/device-list/device-list.component.html
@@ -25,13 +25,44 @@
                     </div>
                 </div> -->
 
+                <div class="card-body form-group">
+                    <div class="custom-control custom-switch">
+                        <input (click)="enableQuery(i)" [disabled]="isQueryEnabled(i)" type="checkbox" class="custom-control-input"
+                            [id]="'querySwitch-' + i" [checked]="isQueryEnabled(i)">
+                        <label class="custom-control-label" [for]="'querySwitch-' + i">Player Query</label>
+                    </div>
+                </div>
+
+
+                <div class="card-body form-group">
+                    <div class="custom-control custom-switch">
+                        <input (click)="enableMedic(i)" [disabled]="isMedicEnabled(i)" type="checkbox" class="custom-control-input"
+                            [id]="'medicSwitch-' + i" [checked]="isMedicEnabled(i)">
+                        <label class="custom-control-label" [for]="'medicSwitch-' + i">Medic Station</label>
+                    </div>
+                </div>
+
+
+                <div class="card-body form-group">
+                    <div class="custom-control custom-switch">
+                        <input (click)="enableRegister(i)" [disabled]="isRegisterEnabled(i)" type="checkbox" class="custom-control-input"
+                            [id]="'registerSwitch-' + i" [checked]="isRegisterEnabled(i)">
+                        <label class="custom-control-label" [for]="'registerSwitch-' + i">Register Team</label>
+                    </div>
+                    <div *ngIf="isRegisterEnabled(i)">
+                        <div class="card card-body">
+                          <!-- NEED TO PUT DROPDOWN (or similar) FOR TEAM SELECTION HERE FROM ALLOWED TEAMS -->
+                          {{device.teamID}}
+                        </div>
+                    </div>
+                </div>
 
 
                 <div class="card-body form-group">
                     <div class="custom-control custom-switch">
                         <input (click)="enableBomb(i)" [disabled]="isBombEnabled(i)" type="checkbox" class="custom-control-input"
                             [id]="'bombSwitch-' + i" [checked]="isBombEnabled(i)">
-                        <label class="custom-control-label" [for]="'bombSwitch-' + i">Bomb Mode</label>
+                        <label class="custom-control-label" [for]="'bombSwitch-' + i">Bomb/IED</label>
                     </div>
                     <div *ngIf="isBombEnabled(i)">
                         <div class="card card-body">
@@ -63,7 +94,7 @@
                     <div class="custom-control custom-switch">
                         <input (click)="enableCapture(i)" [disabled]="isCaptureEnabled(i)" type="checkbox" class="custom-control-input"
                             [id]="'captureSwitch-' + i" [checked]="isCaptureEnabled(i)">
-                        <label class="custom-control-label" [for]="'captureSwitch-' + i">Capture Mode</label>
+                        <label class="custom-control-label" [for]="'captureSwitch-' + i">Capture Point</label>
                     </div>
                     <div *ngIf="isCaptureEnabled(i)">
                         <div class="card card-body">
@@ -90,9 +121,9 @@
                             </div>
 
                             <div class="custom-control custom-switch">
-                                <input (click)="enableMedic(i)" type="checkbox" class="custom-control-input"
-                                    [id]="'medicSwitch-' + i" [checked]="device.allow_medic">
-                                <label class="custom-control-label" [for]="'medicSwitch-' + i">Allow Medic</label>
+                                <input (click)="enableAllowMedic(i)" type="checkbox" class="custom-control-input"
+                                    [id]="'allowMedicSwitch-' + i" [checked]="device.allow_medic">
+                                <label class="custom-control-label" [for]="'allowMedicSwitch-' + i">Allow Medic</label>
                             </div>
 
                         </div>
