--- a/src/app/global/edit-game/edit-game.component.html
+++ b/src/app/global/edit-game/edit-game.component.html
@@ -1,46 +1,55 @@
 <form [formGroup]="gameModeForm" (ngSubmit)="onNewGameModeFormSubmit()">
-    <input type="hidden" formControlName="id">
-    <div class="form-group">
-      <label for="name">Name</label>
-      <input type="text" class="form-control" id="name" placeholder="Firstname" formControlName="name">
-    </div>
-    <div class="form-group">
-      <label for="numNodes">Num of Nodes</label>
-      <input type="text" class="form-control" id="numNodes" placeholder="numNodes" formControlName="numNodes">
-    </div>  
-    <div class="form-group">
-      <label for="nodeModes">Node Modes</label>
-      <button type="button" (click)="setNodes()">Click here to Edit</button>
-      <div class="input-group">
-        <input disabled type="text" class="form-control" id="nodeModes" placeholder="some test" formControlName="nodeModes">
-      </div>
-    </div>
-    <div class="form-group">
-      <label for="map">Map</label>
-      <div class="input-group">
-        <input type="text" class="form-control" id="map" placeholder="" formControlName="map">
-      </div>
-    </div>
-    <button type="submit" class="btn btn-primary">Save</button>
-  </form>
+  <input type="hidden" formControlName="id">
+  <div class="form-group">
+    <label for="name">Name</label>
+    <input type="text" class="form-control" id="name" placeholder="Game Mode Name" formControlName="name">
+  </div>
+  <div class="form-group">
+    <label for="map">Map</label>
+    <select formControlName="map" class="form-control" (change)="changeMap($event)">
+      <option disabled selected value> -- select an option -- </option>
+      <option [value]="map.name" *ngFor="let map of maps">{{map.name}}</option>
+    </select>
+  </div>
 
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-modal="true" role="dialog">
+  <div class="form-group">
+    <label for="nodeModes">Setup Nodes:</label>
+    <button type="button" class="btn btn-success cust_btn" [disabled]="!isMapSelected" (click)="setNodes()">Click here
+      to Edit</button>
+    <br>
+
+    <div class="input-group">
+      <input disabled type="text" class="form-control" id="nodeModes" placeholder="Node Config:"
+        formControlName="nodeModes">
+    </div>
+  </div>
+
+
+  <div class="form-group">
+    <label for="teams">Teams</label>
+    <input type="text" class="form-control" id="teams" placeholder="teams" formControlName="teams">
+  </div>
+  <button type="submit" class="btn btn-primary">Save</button>
+</form>
+
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-modal="true"
+  role="dialog">
   <div class="modal-dialog" role="document">
-      <div class="modal-content">
-          <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Configure your nodes for this game mode</h5>
-              <button type="button" class="close" aria-label="Close" (click)="closeModal()">
-                  <span aria-hidden="true">×</span>
-              </button>
-          </div>
-          <div class="modal-body">
-              <app-device-list></app-device-list>
-          </div>
-          <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" (click)="closeModal()">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
-          </div>
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Configure your nodes for this game mode</h5>
+        <button type="button" class="close" aria-label="Close" (click)="closeModal()">
+          <span aria-hidden="true">×</span>
+        </button>
       </div>
+      <div class="modal-body">
+        <app-device-list ></app-device-list>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" (click)="closeModal()">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
   </div>
 </div>
 <div class="modal-backdrop fade show" id="backdrop" style="display: none;"></div>
