--- a/src/app/secure/profile/profile.component.html
+++ b/src/app/secure/profile/profile.component.html
@@ -32,13 +32,13 @@
               <div class="form-group">
                 <label class="col-md-2 col-sm-3 col-xs-12 control-label">First Name</label>
                 <div class="col-md-10 col-sm-9 col-xs-12">
-                  <input formControlName="fname" type="text" class="form-control" placeholder="{{currentVals.fName}}">
+                  <input formControlName="firstName" type="text" class="form-control" placeholder="{{currentVals.firstName}}">
                 </div>
               </div>
               <div class="form-group">
                 <label class="col-md-2 col-sm-3 col-xs-12 control-label">Last Name</label>
                 <div class="col-md-10 col-sm-9 col-xs-12">
-                  <input formControlName="lname" type="text" class="form-control"  placeholder="{{currentVals.lName}}">
+                  <input formControlName="lastName" type="text" class="form-control"  placeholder="{{currentVals.lastName}}">
                 </div>
               </div>
               <div  *ngIf="isPlayer" class="form-group">
@@ -50,19 +50,19 @@
               <div  *ngIf="isPlayer" class="form-group">
                 <label class="col-md-2 col-sm-3 col-xs-12 control-label">Bio</label>
                 <div class="col-md-10 col-sm-9 col-xs-12">
-                  <input formControlName="bio" type="text" class="form-control"  placeholder="{{currentVals.bio}}"> 
+                  <input formControlName="bio" type="text" class="form-control"  placeholder="{{currentVals.bio}}">
                 </div>
               </div>
               <div  *ngIf="isField" class="form-group">
                 <label class="col-sm-3 col-xs-12 control-label">Field Name</label>
                 <div class="col-md-10 col-sm-9 col-xs-12">
-                  <input formControlName="fieldName" type="text" class="form-control"  placeholder="{{currentVals.fieldName}}"> 
+                  <input formControlName="fieldName" type="text" class="form-control"  placeholder="{{currentVals.fieldName}}">
                 </div>
               </div>
               <div  *ngIf="isField" class="form-group">
                 <label class="col-sm-3 col-xs-12 control-label">Field Description</label>
                 <div class="col-md-10 col-sm-9 col-xs-12">
-                  <input formControlName="profile" type="text" class="form-control"  placeholder="{{currentVals.profile}}"> 
+                  <input formControlName="profile" type="text" class="form-control"  placeholder="{{currentVals.profile}}">
                 </div>
               </div>
             </fieldset>
@@ -84,25 +84,25 @@
             <hr>
             <div class="form-group">
               <div class="col-md-10 col-sm-9 col-xs-12 col-md-push-2 col-sm-push-3 col-xs-push-0">
-                <input (click)="onSubmit()" class="btn btn-primary" type="submit" value="Update Profile">
+                <input (click)="onSubmit()" class="btn btn-primary" type="submit" value="Update Field Profile">
               </div>
             </div>
           </form>
-          <div class="row"> 
+          <div class="row">
             <div id="userCreatedMessage" class="alert alert-primary d-none center-cust">
                Your profile has been updated!<br>
             </div>
             <div id="userCreatFaileddMessage" class="alert alert-danger d-none center-cust">
                We are sorry we were not able to update your profile at this time <br>
-               Please try again or <a [routerLink]="['/non-secure/contact-us']" >contact us from our contact us page</a>
-            </div> 
-           </div>	
+               Please try again or <a [routerLink]="['/non-secure/contact-us']" >contact us.</a>
+            </div>
+           </div>
           <div id="socalMedia">
-            <div class="row"> 
-              <div class="col"> 
+            <div class="row">
+              <div class="col">
                 <div id="fb_card" class="card" >
                   <div class="card-body">
-                    <i class="fa fa-facebook fa-5x"></i>       
+                    <i class="fa fa-facebook fa-5x"></i>
                     <h5 class="card-title">Facebook Connection</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Connected: </h6>
                     <p class="card-text">If you are connected you can share data.</p>
@@ -111,31 +111,31 @@
                   </div>
                 </div>
               </div>
-              <div class="col"> 
+              <div class="col">
                 <div id="twitter_card" class="card" >
                   <div class="card-body">
-                    <i class="fa fa-twitter fa-5x"></i>     
+                    <i class="fa fa-twitter fa-5x"></i>
                     <h5 class="card-title">Twitter Connection</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Connected:</h6>
                     <p class="card-text">If you are connected you can share data.</p>
                     <a href="#"   id="twitter_connect" class="card-link">Connect</a>
                     <a href="#" id="twitter_disconnect" class="card-link">Disconnect</a>
                   </div>
-                </div> 
+                </div>
               </div>
-              <div class="col"> 
+              <div class="col">
                 <div id="yt" class="card" >
                   <div class="card-body">
-                    <i class="fa fa-youtube fa-5x"></i>     
+                    <i class="fa fa-youtube fa-5x"></i>
                     <h5 class="card-title">Youtube Connection</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Connected: </h6>
                     <p class="card-text">If you are connected you can share data.</p>
                     <a href="#"   id="yt" class="card-link">Connect</a>
                     <a href="#"   id="yt" class="card-link">Disconnect</a>
                   </div>
-                </div> 
+                </div>
               </div>
-            </div> 
+            </div>
           </div>
         </div>
         <div id="settings" class="content-panel">
@@ -203,7 +203,7 @@
             <hr>
             <div class="form-group">
               <div class="col-md-10 col-sm-9 col-xs-12 col-md-push-2 col-sm-push-3 col-xs-push-0">
-                <input class="btn btn-primary" type="submit" value="Update Profile">
+                <input (click)="onSubmit()" class="btn btn-primary" type="submit" value="Update Profile">
               </div>
             </div>
           </form>
