--- a/src/app/secure/profile/profile.component.html
+++ b/src/app/secure/profile/profile.component.html
@@ -23,8 +23,8 @@
                     alt="">
                 </figure>
                 <div class="form-inline col-md-10 col-sm-9 col-xs-12">
-                  <input formControlName="profileImage" type="file" class="file-uploader pull-left" accept="image/*">
-                  <button type="submit" (click)="updateImage()" class="btn btn-sm btn-default-alt pull-left">Update Image</button>
+                  <input #imageInput formControlName="profileImage" (change)="getImage($event)" type="file" class="file-uploader pull-left" accept="image/*">
+                  <button type="submit" (click)="saveImage()" class="btn btn-sm btn-default-alt pull-left">Update Image</button>
                 </div>
               </div>
 
