--- a/src/app/secure/profile/profile.component.html
+++ b/src/app/secure/profile/profile.component.html
@@ -23,7 +23,7 @@
                     alt="">
                 </figure>
                 <div class="form-inline col-md-10 col-sm-9 col-xs-12">
-                  <input #imageInput formControlName="profileImage" (change)="getFile($event)" type="file" class="file-uploader pull-left" accept="image/*">
+                  <input formControlName="profileImage" (change)="getFile($event)" type="file" class="file-uploader pull-left" accept="image/*">
                   <button type="submit" (click)="saveImage()" class="btn btn-sm btn-default-alt pull-left">Update Image</button>
                 </div>
               </div>
