--- a/src/app/secure/profile/profile.component.html
+++ b/src/app/secure/profile/profile.component.html
@@ -19,7 +19,7 @@
               <h3 class="fieldset-title">Personal Info</h3>
               <div class="form-group avatar">
                 <figure class="figure col-md-2 col-sm-3 col-xs-12">
-                  <img class="img-rounded img-responsive" src="{{currentVals.imageData}}" onerror="this.onerror=null; this.src='https://bootdey.com/img/Content/avatar/avatar1.png'"
+                  <img id="profileImage" class="img-rounded img-responsive" src="{{currentVals.imageData}}" onerror="this.onerror=null; this.src='https://bootdey.com/img/Content/avatar/avatar1.png'"
                     alt="">
                 </figure>
                 <div class="form-inline col-md-10 col-sm-9 col-xs-12">
