--- a/src/app/global/edit-game/edit-game.component.html
+++ b/src/app/global/edit-game/edit-game.component.html
@@ -12,6 +12,28 @@
     </select>
   </div>
 
+  <table class="table table-bordered" formArrayName="teams">
+    <tr>
+      <th colspan="2">Add Multiple Quantity:</th>
+      <th width="150px"><button type="button" (click)="addTeam()" class="btn btn-primary">Add More</button></th>
+    </tr>
+    <div >
+      <tr *ngFor="let team of teams.controls; let i=index" [formGroupName]="i" >
+        <td>
+            Name :{{i}} {{teams.controls[0].value.name}}
+            <input type="text" formControlName="name"  class="form-control">
+        </td>
+        <td>
+            Color:
+            <input type="text" formControlName="color" class="form-control">
+        </td>
+        <td>
+            <button (click)="removeTeam(i)" class="btn btn-danger">Remove</button>
+        </td>
+      </tr>
+    </div>
+    
+  </table>
   <div class="form-group">
     <label for="nodeModes">Setup Nodes:</label>
     <button type="button" class="btn btn-success cust_btn" [disabled]="!isMapSelected" (click)="setNodes()">Click here
@@ -25,10 +47,10 @@
   </div>
 
 
-  <div class="form-group">
+  <!-- <div class="form-group">
     <label for="teams">Teams</label>
     <input type="text" class="form-control" id="teams" placeholder="teams" formControlName="teams">
-  </div>
+  </div> -->
   <button type="submit" class="btn btn-primary">Save</button>
 </form>
 
