--- a/src/app/non-secure/contact-us/contact-us.component.html
+++ b/src/app/non-secure/contact-us/contact-us.component.html
@@ -21,9 +21,9 @@
           <h4>Our Locations</h4>
 
           <address>
-          San Francisco, CA 94107<br>
-          Chesapeake, VA 23322<br>
-          Charleston, SC 29407<br>
+          San Francisco, CA<br>
+          Chesapeake, VA<br>
+          Charlotte, NC<br>
         </address>
         </div>
       </div><!-- end col -->
@@ -33,7 +33,7 @@
           <i class="fa fa-book fa-3x text-colored"></i>
           <h4>24x7 Support</h4>
 
-          <p>SLA of less than 48hrs</p> 
+          <p>SLA of less than 48hrs</p>
         </div>
       </div><!-- end col -->
 
@@ -61,7 +61,7 @@
           <div class="form-group">
             <label for="email2">Email</label>
             <input class="form-control" id="email2" name="email" type="text" onfocus="if(this.value == 'E-mail') this.value='';" onblur="if(this.value == '') this.value='E-mail';" value="E-mail">
-            <div class="error" id="err-emailvld" style="display: none;">E-mail is not a valid format</div> 
+            <div class="error" id="err-emailvld" style="display: none;">E-mail is not a valid format</div>
           </div> <!-- /Form-email -->
 
           <div class="form-group">
@@ -71,7 +71,7 @@
             <div class="error" id="err-message" style="display: none;">Please enter message</div>
           </div> <!-- /col -->
 
-          <div class="row">            
+          <div class="row">
             <div class="col-xs-12">
               <div id="ajaxsuccess" class="text-success">E-mail was successfully sent.</div>
               <div class="error" id="err-form" style="display: none;">There was a problem validating the form please check!</div>
@@ -85,9 +85,6 @@
       </div> <!-- end col -->
 
     </div> <!-- end row -->
-        
+
   </div>
 </div>
-
-
-      
