--- a/src/app/non-secure/field-info/field-info.component.html
+++ b/src/app/non-secure/field-info/field-info.component.html
@@ -17,12 +17,11 @@
                             <a href="#">Enhanced Safety</a>
                         </h4>
                         <p class="blog-card-description">Deploy marshals to maintain player safety and fair gameplay -
-                            let our system worry about keeping track of gameplay. <span
+                            let our system worry about objective control status and player accomplishments. <span
                                 id="dots-tab1">...</span><span id="more-tab1">Our system maintains accurate point tally,
-                                objective control status, and general gameplay accountability among as many objectives
-                                you want, which allows marshals to focus on player safety rather than become distracted
-                                verifying objective ownership or other sundry gameday tasks that should be-and are-automated
-                                by Skirmesh gaming systems.</span></p>
+                                objective status, and general accountability among as many objectives you want, which allows
+                                marshals to focus on player safety rather than become distracted verifying sundry gameday
+                                tasks that should be-and are-automated by Skirmesh gaming systems.</span></p>
                         <div class="ftr">
                             <div class="author">
                                 <button id="btn-tab1" class="btn btn-outline-success" (click)="tab1LearnMore()">Learn More </button>
@@ -44,7 +43,7 @@
                         <h4 class="blog-card-caption">
                             <a href="#">Fan Favorite Missions - Digitized</a>
                         </h4>
-                        <p class="blog-card-description">Point Capture. Bombs/IEDs. Medic stations and more. All digitized,
+                        <p class="blog-card-description">Point Capture. Bombs/IEDs. Medic stations, and more. All digitized,
                             overlaid on your field map, and linked to the cloud to allow the Commanding Officers,
                             players, or anyone in the world to watch the action in real time. <span
                                 id="dots-tab2">...</span><span id="more-tab2">Games are easy to start, pause, stop,
@@ -55,14 +54,13 @@
                                 Skirmesh is an expandable system with deployable objectives(nodes). Each can serve a
                                 variety of functions and can be configured to create diabolic scenarios that challenge
                                 tactics and teamwork of the most skilled players. Control the “worth” of an objective in
-                                an assault to steer the fight or allow teams to capture, destroy entire objectives to
+                                an assault to steer the fight or allow teams to capture or destroy entire objectives to
                                 remove them from play, and establish forward operating bases complete with a medic
                                 station to enhance the team footprint and dominance on the field. Every detail is
                                 configurable in real time to provide the gameplay designer the ability to shift the
                                 fight on the fly.
 
-                                Simply put, this system gives purpose and structure to otherwise chaotic
-                                scenarios.</span></p>
+                                Simply put, this system gives purpose and structure to otherwise chaotic scenarios.</span></p>
                         <div class="ftr">
                             <div class="author">
                                 <button id="btn-tab2" class="btn btn-outline-success"  (click)="tab2LearnMore()">Learn More </button>
@@ -140,4 +138,5 @@
         </div>
 
     </div>
+    <br/>
 </div>
