--- a/src/app/non-secure/features-list/features-list.component.html
+++ b/src/app/non-secure/features-list/features-list.component.html
@@ -1,39 +1,16 @@
-<p>features-list works!</p>
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-lg-8 col-md-10 col-12">
-          
-            <h5 class="mt-4"> <span class="p-2 bg-light shadow rounded text-success"> Version 1.3.8</span> - 4th Jun 2020</h5>
-            <ul class="list-unstyled mt-3">
-                <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i>Latest Update Bootstrap v4.5</li>
-                <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i>Latest Update jQuery v3.5.1</li>
-                <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i>Latest Update Material Design Icons v5.3.45</li>
-                <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i>New <b>RTL Version</b> (Only CSS Base)</li>
-                <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i>New <b>Dark Version</b> (Only CSS Base)</li>
-                <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i>New <b>Dark RTL Version</b> (Only CSS Base)</li>
-                <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i>Added 6 Colors scheme</li>
-                <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i>Fixed some responsive issues</li>
-            </ul>
-            
-            <h5 class="mt-4"> <span class="p-2 bg-light shadow rounded text-success"> Version 1.3.0</span> - 28t May 2020</h5>
-            <ul class="list-unstyled mt-3">
-                <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i>Latest Update Material Design Icons v5.3.45</li>
-                <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i>New <b>RTL Version</b> (Only CSS Base)</li>
-                <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i>New <b>Dark Version</b> (Only CSS Base)</li>
-                <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i>New <b>Dark RTL Version</b> (Only CSS Base)</li>
-                <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i>Added 6 Colors scheme</li>
-                <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i>Fixed some responsive issues</li>
-            </ul>
-      
 
-            <h5 class="mt-4"> <span class="p-2 bg-light shadow rounded text-success"> Version 1.0.0</span> - 4th March, 2020</h5>
+            <h5 class="mt-4"> <span class="p-2 bg-light shadow rounded text-success"> Version 1.0.0</span> - 1st May 2021</h5>
             <ul class="list-unstyled mt-3">
-                <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i>Initial Released</li>
+                <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i>Initial Release</li>
             </ul>
-          
+
+
 
             <div class="mt-4">
-                <a href="#" class="btn btn-primary">Purchase Now</a>
+                <a href="#" class="btn btn-primary">Please give us your Feedback!</a>
             </div>
         </div><!--end col-->
     </div><!--end row-->
