some small narrative, grammer, and styling

--- a/src/app/non-secure/field-info/field-info.component.html
+++ b/src/app/non-secure/field-info/field-info.component.html
@@ -1,7 +1,7 @@
 <div class="custom_skirmesh">
     <div class="cust_skirmesh_board">
-        <h3>Take Airsoft into the future</h3>
-        <h4>Turn your Airsoft Field into a video game</h4>
+        <h3>Take Airsoft and Paintball into the Future</h3>
+        <!-- <h4>Turn your Airsoft Field into a video game</h4> -->
     </div>
     <div class="container">
         <div class="row">
@@ -103,7 +103,7 @@
         <div class="row">
             <div class="col">
                 <form role="form" name="ajax-form" id="ajax-form" action="https://formsubmit.io/send/bharath.ram89@gmail.com" method="post" class="cust_skirmesh_board form-main">
-                    <h4 class="text-center center-cust">Interested in bringing your field to the future? Message us here </h4>
+                    <h4 class="text-center center-cust">Interested in learning more or just interested?<br/>Message us!</h4>
                   <div class="form-group">
                     <label for="name2">Name</label>
                     <input class="form-control" id="name2" name="name" onblur="if(this.value == '') this.value='Name'" onfocus="if(this.value == 'Name') this.value=''" type="text" value="Name">
